src/styles/override.css
@import url(markdown.css);

@supports (padding-top: env(safe-area-inset-top)) {
	:root {
		--device-inset-top: env(safe-area-inset-top, 0px);
		--device-inset-left: env(safe-area-inset-left, 0px);
		--device-inset-right: env(safe-area-inset-right, 0px);
		--device-inset-bottom: env(safe-area-inset-bottom, 0px);
	}
}

html {
	--ion-safe-area-top: var(--device-inset-top, 0px);
	--ion-safe-area-left: var(--device-inset-left, 0px);
	--ion-safe-area-right: var(--device-inset-right, 0px);
	--ion-safe-area-bottom: var(--device-inset-bottom, 0px);

	/* For some reason iPhones apply a padding underneath, so force height=viewport-height */
	height: 100vh;
}

ion-toast {
	--ion-safe-area-bottom: calc(var(--device-inset-bottom, 0px) + 80px);
}

html, html.md {
	--ampersand-font-name: 'Inter';
	--ion-default-font: 'Inter', 'Roboto', sans-serif;
	--ion-font-family: var(--ampersand-font-name), var(--ion-default-font);
}

html.high-legibility.hl-atkinson {
	--ampersand-font-name: 'Atkinson Hyperlegible'
}

html.high-legibility.hl-opendyslexic {
	--ampersand-font-name: 'OpenDyslexic';
}

html.high-legibility.hl-lexend {
	--ampersand-font-name: 'Lexend';
}

html.high-legibility.hl-system-font {
	--ampersand-font-name: system-ui;
	--ion-font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
}

html:is(.plt-tablet, .plt-desktop) ion-tabs {
	flex-direction: row-reverse !important;
}

html:is(.plt-tablet, .plt-desktop) ion-tab-bar {
	flex-direction: column;
	justify-content: center;
	height: 100%;
	width: 80px;
	padding-right: 0;
}

html:is(.plt-tablet, .plt-desktop) ion-tab-button {
	max-height: 96px;
}

html:is(.plt-tablet, .plt-desktop) ion-tabs :not(ion-tab-bar) {
	--ion-safe-area-left: 0px;
}

ion-item::part(native) {
	border-bottom: 0px;
}

ion-content {
	--padding-bottom: var(--ion-safe-area-bottom, 0px);
}

ion-content:has(> ion-fab.fab-vertical-bottom[slot="fixed"] > ion-fab-button) {
	--padding-bottom: calc(var(--ion-safe-area-bottom, 0px) + 80px);
}

ion-content > ion-datetime {
	padding-right: var(--ion-safe-area-right, 0px);
	padding-left: var(--ion-safe-area-left, 0px);
}

ion-fab:not(html:not(.plt-tablet, .plt-desktop) ion-tabs *) {
	margin-bottom: var(--ion-safe-area-bottom, 0px);
}

ion-modal.modal-sheet ion-header ion-toolbar:first-of-type {
	--ion-safe-area-top: 0px;
}

ion-modal.modal-sheet {
	--border-radius: 16px;
	--ion-safe-area-top: inherit;
	--ion-safe-area-left: inherit;
	--ion-safe-area-right: inherit;
	--ion-safe-area-bottom: inherit;
}

.centered-text {
	text-align: center;
	padding: 1em;
}

.more-padding {
	padding-bottom: 2em;
}

p {
	text-wrap: wrap;
}

ion-label.nowrap > *:not(div) {
	text-wrap: nowrap !important;
	text-overflow: ellipsis !important;
	overflow: hidden !important;
}

ion-label.wrap {
	text-wrap-mode: wrap !important;
}

ion-datetime {
	max-width: 100%;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
	display: none !important;
}

* {
	scrollbar-width: thin;
	scrollbar-color: var(--ion-color-primary) transparent;
}

